--- a/package.json
+++ b/package.json
@@ -96,5 +96,9 @@
     "postcss-cli": "^8.3.1",
     "raphael": "^2.3.0",
     "style-loader": "^1.3.0"
+  },
+  "engines": {
+    "node": "16.x",
+    "npm": "8.5.1"
   }
 }
